# fenix-templates

./: README.md  index.json  my-local-fenix.json  template-content.json
template-files/: CMakeLists.txt
template-files/UserApp/Src/: main.cpp
